# Football-League-Scraper-CLI

./: .gitignore  Readme.md  bundesliga_fixture.txt  bundesliga_fixture_not_played.txt  bundesliga_table.txt  fixture.txt  pyproject.toml  rich_fixture_testing.py
Bundesliga_Scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bundesliga_scraper/: __main__.py  config.py  data_fetcher.py  user_input_parser.py
bundesliga_scraper/api/: api.py
bundesliga_scraper/arg_parser/: user_input_parser.py
bundesliga_scraper/crafting/: argparse_testing.py  columns.py  graph_testings.py  layout.py  rich_fixture_testing.py  rich_testing.py  table.py
bundesliga_scraper/data_extractors/: bundesliga_fixture_extractor.py  bundesliga_table_extractor.py
bundesliga_scraper/data_printer/: fixture_printer.py  rich_testing.py  table_printer.py  team_printer.py
bundesliga_scraper/datatypes/: constants.py  data.py  fixture_entry.py  matchday.py  matchday_fixture.py  matchday_table.py  table.py  table_entry.py  table_job_creation.py  team.py  utils.py
bundesliga_scraper/datatypes/fixture/: fixture_creation.py  fixture_entry.py  fixture_parser.py  fixture_request_handler.py  fixture_utils.py
bundesliga_scraper/datatypes/league/: league.py
bundesliga_scraper/datatypes/table/: table_calculator.py  table_creation.py  table_entry.py  table_parser.py  table_request_handler.py
bundesliga_scraper/datatypes/team/: team_creation.py  team_parser.py  team_request_handler.py
bundesliga_scraper/request_handler/: fixture_request_handler.py  handler.py  request_handler.py  table_request_handler.py  team_request_handler.py  utils.py
bundesliga_scraper/table/: calculator.py  parser.py  rich_table_creation.py
