[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Bundesliga-Scraper"
version = "0.0.1"
authors = [
  {name = "Aaron Bittel"},
]
dependencies = [
  "argparse",
  "requests",
  "beautifulsoup4",
  "colorama"
]

[project.optional-dependencies]
dev = [
  "black"
]

[tool.black]
line-length = 120

[project.scripts]
get = "bundesliga_scraper.__main__:main"